// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codeReducer 1`] = `
{
  "code": "loading...",
  "error": null,
  "loading": null,
}
`;

exports[`codeReducer 2`] = `
{
  "foo": "bar",
  "loading": true,
}
`;

exports[`codeReducer 3`] = `
{
  "code": "foobar",
  "foo": "bar",
  "loading": false,
}
`;

exports[`codeReducer 4`] = `
{
  "error": "ups",
  "foo": "bar",
  "loading": false,
}
`;

exports[`should parse GitHub reference properly 1`] = `
{
  "fromLine": 0,
  "title": "src/theme/ReferenceCodeBlock/index.ts",
  "toLine": Infinity,
  "url": "https://raw.githubusercontent.com/christian-bromann/docusaurus-theme-github-codeblock/main/src/theme/ReferenceCodeBlock/index.ts",
}
`;

exports[`should parse GitHub reference properly 2`] = `
{
  "fromLine": 104,
  "title": "src/theme/ReferenceCodeBlock/index.tsx",
  "toLine": 9,
  "url": "https://raw.githubusercontent.com/christian-bromann/docusaurus-theme-github-codeblock/main/src/theme/ReferenceCodeBlock/index.tsx",
}
`;
